--- a/__tests__/__fixtures__/testpage-ru.html
+++ b/__tests__/__fixtures__/testpage-ru.html
@@ -4,7 +4,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script"></script>
+    <script src="script?query=value"></script>
     <link href="href/file.css">
     <img src="https://testpage.ru/src!@$%&*()image.jpeg">
 </body></html>
